--- a/static/.well-known/apple-app-site-association.json
+++ b/static/.well-known/apple-app-site-association.json
@@ -1,8 +1,11 @@
 {
-  "webcredentials": {
-    "apps": [
-      "KAW43335BG.com.companyName.App1",
-      "KAW43335BG.com.companyName.App2"
-    ]
-  }
+    “applinks”: {
+        “apps”: [],
+        “details”: [
+            {
+                “appID”: UW7JAY4CE8.me.wideboard.Wideboard,
+                “paths”: [“*”],
+            }
+        ]
+    }
 }
