--- a/static/.well-known/apple-app-site-association.json
+++ b/static/.well-known/apple-app-site-association.json
@@ -3,7 +3,7 @@
         “apps”: [],
         “details”: [
             {
-                “appID”: UW7JAY4CE8.me.wideboard.Wideboard,
+                “appID”: "UW7JAY4CE8.me.wideboard.Wideboard",
                 “paths”: [“*”],
             }
         ]
